--- a/proyecto-ecommercejs/index.html
+++ b/proyecto-ecommercejs/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <!--JS-->
     <script defer src="./js/app.js"></script>
     <script defer src="./js/producto.js"></script>
     <script defer src="./js/carrito.js"></script>
+    <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <!--CSS-->
+    <link rel="stylesheet" href="./css/style.css">
     <title>Proyecto E-commerce</title>
 </head>
 <body>
@@ -33,7 +39,7 @@
                 </form>
             </div>
             <div>
-                <table>
+                <table class="table table-dark table-striped">
                     <tbody>
                         <tr>
                             <td>fdsg</td>
