--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--JS-->
-    <script defer src="./js/app.js"></script>
-    <script defer src="./js/producto.js"></script>
-    <script defer src="./js/carrito.js"></script>
+
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,15 +37,18 @@
                 </form>
             </div>
             <div>
-                <table class="table table-dark table-striped">
-                    <tbody>
+                <table class="table table-dark table-striped" data-table="list">
+                    <thead>
                         <tr>
-                            <td>fdsg</td>
-                            <td>fsdg</td>
-                            <td>fgsd</td>
-                            <td>gsg</td>
-                            <td>gsfdg</td>
+                            <td>id</td>
+                            <td>a</td>
+                            <td>b</td>
+                            <td>b</td>
+                            <td>d</td>
                         </tr>
+                    </thead>
+                    <tbody>
+                        
                     </tbody>
                 </table>
                 <p id="totalCarrito">total</p>
@@ -78,5 +79,6 @@
         </footer>
 
     </div>
+    <script src="./dist/main.js" type="module"></script>
 </body>
 </html>
